--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dropdowniz",
-  "version": "0.0.1",
-  "description": "react simple dropdown component",
+  "version": "0.0.2",
+  "description": "Simple and minimalistic dropdown React component",
   "repository": {
     "type": "git",
     "url": "https://github.com/ivanzusko/react-dropdowniz.git"
