--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
         "keyword-spacing": [2, {"before": true, "after": true}],
         "space-before-blocks": [2, "always"],
         "array-bracket-spacing": [2, "never"],
+        "semi": ["error"],
         "space-in-parens": [2, "never"],
         "strict": [0],
         "valid-jsdoc": 2,
