main in package

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "customizable",
     "simple"
   ],
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf dist",
     "prepublish": "npm run clean && npm run lint && npm run test && babel --plugins transform-es2015-modules-umd src --ignore __tests__ --out-dir ./dist",
